--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -22,7 +22,7 @@
     <div id="wrapper">
       <aside>
         <div class="results">
-          <p><span id="question-num">0/150</span> questions answered</p>
+          <p><span id="question-num">0/150</span> pitanja odgovoreno</p>
           <p>
             Tačnih/Netačnih odgovora:
             <br /><br />
