--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -23,6 +23,7 @@
       <aside>
         <div class="results">
           <p><span id="question-num">0/150</span> pitanja odgovoreno</p>
+          <p id="id-key"></p>
           <p>
             Tačnih/Netačnih odgovora:
             <br /><br />
